# IRBox

./: README.md  README_FA.md  package.json
.github/workflows/: build.yaml
docs/: README.md
docs/superpowers/plans/: 2026-06-23-bridge-interface-routing.md  2026-06-23-editable-routing-rules.md  2026-06-23-interface-liveness.md  2026-06-23-interface-only-mode.md  2026-06-23-multi-interface-management.md
docs/superpowers/specs/: 2026-06-23-bridge-interface-routing-design.md  2026-06-23-multi-interface-management-design.md  2026-06-23-multi-interface-management-design.review.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/core/: iface_status.rs  manager.rs  mod.rs  singbox.rs  xray.rs
src-tauri/src/proxy/: models.rs
src/api/: tauri.ts
src/components/home/: StatusPanel.tsx
src/components/interfaces/: InterfaceModal.tsx  InterfacesPage.tsx
src/components/layout/: Sidebar.tsx
src/components/onboarding/: OnboardingOverlay.tsx
src/components/routing/: RoutingPage.tsx
src/components/ui/: Icons.tsx
src/context/: AppContext.tsx
src/i18n/: translations.ts
